# C-Calculator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  io.c  io.h  main.c  plot.c  plot.h  resize.c  resize.h  solve.c  solve.h
